# team-6a2f9eda838e10dacabedd15

./: .dockerignore  .env.example  .gitignore  .integrity  CLAUDE.md  CROWD_SOURCING_FAQ_PROJECT_REPORT.md  Makefile  README.md  docker-compose.yml  faqs-complete.json  metadata.json  package.json  setup-docker.sh  setup.sh  todo.md  vercel.json
.history/: .gitignore_20260601135813
FastAPI_python_model/: Dockerfile  main.py
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  check_subscriptions.js  docker-entrypoint.sh  package-lock.json  package.json  scratch_db.js  server.js  test-anomaly.js
backend/config/: blocklist.js  db.js  elasticsearch.js  index.js  kafka.js  mailer.js  redis.js  topicWhitelist.js
backend/controllers/: adminController.js  answerController.js  authController.js  faqController.js  notificationController.js  postController.js  pushController.js  questionController.js  searchController.js  tagController.js  userController.js  voteController.js
capacitor-app/: capacitor.config.ts  capacitor_android_setup.md  package-lock.json  package.json
desktop-app/: Installer.cs  build-installer.ps1  main.js  package.json
faq-service/: main.py  requirements.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
kafka/: docker-compose.yml
nginx/: Dockerfile  nginx.conf
podman/: .env.example  deploy-compose.sh  deploy.sh  docker-compose.yml  pod.yaml
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
(+131 files in other folders)
