[package]
name = "prashnasarathi-app"
version = "1.0.0"
description = "Tauri wrapper for PrashnaSārathi"
authors = ["PrashnaSārathi Developers"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "updater", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
